--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ body {
 
   .jumbotron-fluid{
     background-image: url("eternacity.jpg");
+    /* background-size: cover; */
+    object-fit: cover;
+    /* background-repeat: no-repeat; */
+    width: 100%;
+    height: auto;
 
   }
   
