--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     background-image: url("eternacity.jpg");
     /* background-size: cover; */
     object-fit: cover;
-    /* background-repeat: no-repeat; */
+    background-repeat: no-repeat;
     width: 100%;
     height: auto;
 
@@ -156,6 +156,11 @@ body {
     width: 100%;
     height: 100%;
     border: 0;
+  }
+
+  /* Cynthia Container */
+  #cynthia-container {
+
   }
   
   /* Footer styles */
