--- a/style.css
+++ b/style.css
@@ -59,19 +59,10 @@ body {
     color: #fff;
     text-decoration: underline;
   }
-
-  .jumbotron-fluid{
-    background-image: url("eternacity.jpg");
-    /* background-size: cover; */
-    object-fit: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: auto;
-
-  }
   
+
   /* Main content styles */
-  
+
   .main-content {
     padding: 2rem;
     background-color: #fff;
@@ -93,39 +84,7 @@ body {
     margin-top: 1rem;
   }
   
-  /* Carousel styles */
-  
-  .carousel-item img {
-    height: 400px;
-    object-fit: cover;
-  }
-  
-  .carousel-control-prev,
-  .carousel-control-next {
-    width: 3%;
-  }
-  
-  .carousel-control-prev-icon,
-  .carousel-control-next-icon {
-    height: 100%;
-    transform: translateY(0);
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  }
-  
-  .carousel-control-next-icon:before {
-    content: '>';
-    font-size: 2rem;
-  }
-  
-  .carousel-control-prev-icon:before {
-    content: '<';
-    font-size: 2rem;
-  }
-  
   /* Music section styles */
-  
   .container {
     max-width: 800px;
     margin: 0 auto;
@@ -158,13 +117,80 @@ body {
     border: 0;
   }
 
-  /* Cynthia Container */
-  #cynthia-container {
-
+  /* Trainer Jumbotron */
+  #trainer-jumbotron h1, p{
+    text-align: center;
   }
-  
+
+
+  /* Cynthia Container */
+  #cynthia h3 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+
+  #cynthia p {
+    padding-left: 20px;
+    text-align: justify;
+  }
+
+
+  #cynthia img[src=
+  "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F7574%2Fb1b9b5b504b9bb5c99c74abf89ba0acb98f214b0r1-687-791v2_hq.jpg&f=1&nofb=1&ipt=50183c4bb8a93ee195f3d1e79dc521af0e0cfddfacb6209768f12ac369c89a7f&ipo=images"]
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: block;
+    height: 400px;
+    width: 600px;
+  }
+
+  #cynthia img[src=
+  "https://archives.bulbagarden.net/media/upload/thumb/c/c3/Brilliant_Diamond_Shining_Pearl_Cynthia.png/472px-Brilliant_Diamond_Shining_Pearl_Cynthia.png"]
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: block;
+    height: 700px;
+    width: 300px;
+  }
+
+
+  /* Gardenia Container */
+  #gardenia h3 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+
+  #gardenia p {
+    padding-left: 20px;
+    text-align: justify;
+  }
+
+  #gardenia img[src=
+  "https://archives.bulbagarden.net/media/upload/thumb/9/97/Brilliant_Diamond_Shining_Pearl_Gardenia.png/406px-Brilliant_Diamond_Shining_Pearl_Gardenia.png"]
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: block;
+    height: 700px;
+    width: 300px;
+  }
+
+  #gardenia img[src=
+  "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpm1.narvii.com%2F6077%2Fd3ff474c1ef53522d6af8d00ac8ade14ae05786f_hq.jpg&f=1&nofb=1&ipt=4293b45b8be8d5cc3aba88612f38ce68e92c96b643fd8dcc4530f0c8c1e3e6df&ipo=images"]
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+    display: block;
+    height: 450px;
+    width: 650px;
+  }
+ 
+
   /* Footer styles */
-  
   footer {
     background-color: #343a40;
     color: #fff;
